added acts, routing ok (removed animations for now as it reloaded the list each time)

--- a/fabrik4/composer.json
+++ b/fabrik4/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "slim/slim": "2.*",
-        "illuminate/database": "*"
+        "illuminate/database": "*",
+        "icanboogie/inflector": "*"
     },
     "autoload": {
         "classmap": [
